# evm-sc-utils

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
evm_sc_utils/: merkle_tree.py  signers.py
evm_utils/: __init__.py
tests/: test_merkle_tree.py  test_signers.py
