[tool.poetry]
name = "evm-sc-utils"
version = "0.1.0"
description = "Utilities that are helpful when developing Ethereum Virtual Machine Smart Contracts with Python."
authors = ["mpeyfuss <82735893+mpeyfuss@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
web3 = "^5.29.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.950"
black = "^22.3.0"
pylint = "^2.13.8"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
